@@ -1,5 +1,10 @@
 2009-10-28  Paolo Bonzini  <bonzini@gnu.org>
 
+	PR rtl-optimization/39715
+	* gcc.target/arm/thumb-bitfld1.c: New.
+
+2009-10-28  Paolo Bonzini  <bonzini@gnu.org>
+
 	PR rtl-optimization/40741
 	* gcc.target/arm/thumb-branch1.c: New.
 
