@@ -1,5 +1,11 @@
 2009-10-28  Paolo Bonzini  <bonzini@gnu.org>
 
+	PR rtl-optimization/39715
+	* combine.c (simplify_comparison): Use extensions to
+	widen comparisons.  Try an ANDing first.
+
+2009-10-28  Paolo Bonzini  <bonzini@gnu.org>
+
 	PR rtl-optimization/40741
 	* config/arm/arm.c (thumb1_rtx_costs): IOR or XOR with
 	a small constant is cheap.
